@@ -6,7 +6,10 @@ import java.awt.GraphicsDevice;
 import java.awt.GraphicsEnvironment;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
+import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
+import java.awt.event.ComponentAdapter;
+import java.awt.event.ComponentEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
@@ -159,6 +162,11 @@ public class DataViewer extends JFrame implements DomainListener {
 			frame.setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
 		
 			frame.getContentPane().setLayout(new BorderLayout());
+			frame.addComponentListener(new ComponentAdapter() {
+				public void componentResized(ComponentEvent e) {
+					log.info("Frame resized.");
+				}
+			});
 	
 			frame.setTitle("RDV");
 		}
@@ -814,6 +822,12 @@ public class DataViewer extends JFrame implements DomainListener {
  	}
 
 	public static void main(String[] args) {
+		//enable dynamic layout during application resize
+		Toolkit toolkit = Toolkit.getDefaultToolkit();
+		if (!toolkit.isDynamicLayoutActive()) {
+			toolkit.setDynamicLayout(true);
+		}
+		
 		Options options = new Options();
 		Option hostNameOption = OptionBuilder.withArgName("host name")
 											 .hasArg()
